Add support for organizational MS accounts

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
-    "name": "xrh0905/oauth-microsoft",
+    "name": "nospi/oauth-microsoft",
     "description": "Log in to your Flarum forum with Microsoft",
     "keywords": [
-        "flarum", "microsoft", "sso", "oauth", "login"
+        "flarum",
+        "microsoft",
+        "sso",
+        "oauth",
+        "login"
     ],
     "type": "flarum-extension",
     "license": "MIT",
@@ -14,17 +18,21 @@
     "require": {
         "flarum/core": "^1.2.0",
         "fof/oauth": "^1.3.0",
-        "stevenmaguire/oauth2-microsoft": "^2.2"
+        "nospi/oauth2-microsoft": "0.1.0"
     },
     "authors": [
         {
             "name": "xrh0905",
             "homepage": "https://github.com/xrh0905"
+        },
+        {
+            "name": "nospi",
+            "homepage": "https://github.com/nospi"
         }
     ],
     "autoload": {
         "psr-4": {
-            "xrh0905\\OAuthMicrosoft\\": "src/"
+            "nospi\\OAuthMicrosoft\\": "src/"
         }
     },
     "extra": {
